[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/curve_edit/TiltInspect.gd" type="Script" id=1]

[node name="Vector3Inspect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 120 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -10.0
margin_right = 41.0
rect_min_size = Vector2( 50, 20 )
text = "Tilt"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="valueContain" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -56.0
margin_right = -20.0
margin_bottom = 56.0
rect_min_size = Vector2( 100, 60 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiltContain" type="HBoxContainer" parent="valueContain"]
margin_top = 44.0
margin_right = 100.0
margin_bottom = 68.0
alignment = 2

[node name="tiltLabel" type="Label" parent="valueContain/tiltContain"]
margin_left = 17.0
margin_top = 5.0
margin_right = 22.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.5, 0.5, 0.5, 1 )
text = "t"
align = 1
valign = 1

[node name="tiltBox" type="SpinBox" parent="valueContain/tiltContain"]
margin_left = 26.0
margin_right = 100.0
margin_bottom = 24.0
min_value = -9.22337e+18
max_value = 9.22337e+18
step = 0.001
[connection signal="value_changed" from="valueContain/tiltContain/tiltBox" to="." method="_on_tiltBox_value_changed"]
